Improve editing functions provided by bezier node handles.